<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>io.crums</groupId>
  <artifactId>util</artifactId>
  <version>${revision}</version>

  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <url>https://github.com/crums-io/io-util</url>

  <description>
    A small collection of utility modules for Java Collections, JSON, general I/O (java.nio), buffers,
    and persistent fixed width tables.
  </description>



  <licenses>
    <license>
      <name>GNU Lesser General Public License, Version 3</name>
      <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Babak Farhang</name>
      <email>babak@crums.io</email>
      <organization>Crums</organization>
      <organizationUrl>https://crums.io</organizationUrl>
    </developer>
  </developers>

  <profiles>
    <profile>
      <id>deploy-profile</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  
  <scm>
    <connection>scm:git:git://github.com/crums-io/io-util.git</connection>
    <developerConnection>scm:git:ssh://github.com:crums-io/io-util.git</developerConnection>
    <url>http://github.com/crums-io/io-util/tree/master</url>
  </scm>
  
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    
  </distributionManagement>








	<properties>
	  <!-- NOTE: centralized revision property doesn't jive well with
	             stable submodules.
	             
	             -Ugh. Can't find a clean way
	             to keep submodules at different versions on central.
	             Giving in to updating the submodule versions en-bloc,
	             even if nothing changed in the submodule -->
	             
    <revision>1.0.5-SNAPSHOT</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>16</maven.compiler.release>
		<flatten.version>1.2.2</flatten.version>
	</properties>


  <modules>
    <module>io-util</module>
    <module>io-xp</module>
    <module>table-io</module>
    <module>jsonimple</module>
  </modules>

	<build>

		<plugins>

      

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


			

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>



      <!-- w/o plugin below, ${revision} is not resolved  -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>${flatten.version}</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>






      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.1</version>
        <configuration>
          <!--
          Note the following is necessary only if _other_ javadoc errors are present,
          i.e. unnecessary:
          
          <sourceFileExcludes>module-info.java</sourceFileExcludes>
          
          -->
          <!--
          Following are defaults:
          
          <quiet>false</quiet> (not exactly "quiet" when set to true)
          <failOnWarnings>false</failOnWarnings>
          <failOnError>true</failOnError>
          
          -->
          
          <bottom>
            <![CDATA[
            <table width="100%">
            <tr>
            <td style="text-align: left;">&nbsp;io.crums:]]>${project.artifactId} v${revision}
            <![CDATA[ <br/>
            &nbsp;Licensed under the GNU Lesser General Public License v3
            (<a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPL</a>)
            </td>
            <td style="text-align: right;"><br/>&copy; 2020-2024 <a href="http://crums.io">crums.io</a> All Rights Reserved.&nbsp;&nbsp;</td>
            </tr>
            </table>
            ]]>
          </bottom>
          
        </configuration>
        
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            </execution>
        </executions>
      </plugin>
        
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.13</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
      
      
      
      
      
		</plugins>

	</build>


	<dependencies>


    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>

    
    <dependency>
      <groupId>io.crums</groupId>
      <artifactId>unit-io</artifactId>
      <version>1.0.0</version>
      <scope>test</scope>
    </dependency>

	</dependencies>

</project>
